--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,16 @@ crate-type = ["cdylib"]
 
 [dependencies]
 seed = "^0.6.0"
-wasm-bindgen = "^0.2.50"
+wasm-bindgen = "^0.2"
 
 # For serialization, eg sending requests to a server. Otherwise, not required.
-serde = { version = "^1.0.85", features = ['derive'] }
-futures = "^0.1.26"
+serde = { version = "^1.0", features = ['derive'] }
+futures = "^0.3"
+gloo-timers = { version = "0.2.0", features = ['futures'] }
 
 
 [dev-dependencies]
-wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version
+wasm-bindgen-test = "^0.3" # NOTE: keep in sync with wasm-bindgen version
 
 
 [profile.release]  # Attempts to minimize file size
